// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "wfa/measurement/reporting/v2alpha/report.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ReportsServiceProto";
option go_package = "github.com/world-federation-of-advertisers/cross-media-measurement/reporting/apiv2alpha/reportingpb";

// Service for interacting with `Report` resources.
service Reports {
  // Returns the `Report` with the specified resource key.
  rpc GetReport(GetReportRequest) returns (Report) {
    option (google.api.http) = {
      get: "/v2alpha/{name=measurementConsumers/*/reports/*}"
    };
    option (google.api.method_signature) = "name";
  }

  // Lists `Report`s.
  rpc ListReports(ListReportsRequest) returns (ListReportsResponse) {
    option (google.api.http) = {
      get: "/v2alpha/{parent=measurementConsumers/*}/reports"
    };
    option (google.api.method_signature) = "parent";
  }

  // Creates a `Report`.
  rpc CreateReport(CreateReportRequest) returns (Report) {
    option (google.api.http) = {
      post: "/v2alpha/{parent=measurementConsumers/*}/reports"
      body: "report"
    };
    option (google.api.method_signature) = "parent,report";
  }
}

// Request message for `GetReport` method.
message GetReportRequest {
  // The name of the report to retrieve.
  // Format: measurementConsumers/{measurement_consumer}/reports/{report}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { type: "reporting.halo-cmm.org/Report" }
  ];
}

// Request message for `ListReports` method.
message ListReportsRequest {
  // Format: measurementConsumers/{measurement_consumer}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "reporting.halo-cmm.org/Report"
    }
  ];

  // The maximum number of reports to return. The service may return fewer than
  // this value.
  // If unspecified, at most 50 reports will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 2;

  // A page token, received from a previous `ListReports` call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided to `ListReports` must match
  // the call that provided the page token.
  string page_token = 3;

  // Result filter. Raw CEL expression that is applied to the message.
  string filter = 4;
}

// Response message for `ListReports` method.
message ListReportsResponse {
  // The reports from the specified measurement consumer. Ordered by
  // `create_time`, descending.
  repeated Report reports = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

// Request message for `CreateReport` method.
message CreateReportRequest {
  // The parent resource where this report will be created.
  // Format: measurementConsumers/{measurement_consumer}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "reporting.halo-cmm.org/Report"
    }
  ];

  // The ID to use for the report, which will become the final component of
  // the report's resource name.
  //
  // This must conform to RFC 1034, with the additional restriction that all
  // letters must be lower-case.
  string report_id = 2 [(google.api.field_behavior) = REQUIRED];

  // The report to create.
  Report report = 3 [(google.api.field_behavior) = REQUIRED];

  // A unique identifier for this request. Restricted to 36 ASCII characters.
  // A random UUID is recommended.
  // This request is only idempotent if a `request_id` is provided.
  string request_id = 4;
}
